# orario-universita

./: .gitattributes  .gitignore  README.md  justfile  orario.py  pyproject.toml
orario_universita/: __main__.py  calendar_parsing.py  configuration.py  utilities.py
orario_universita/templates/: base.html  calendar_choose.html  choose_subjects.html  index.html  orario.tex
templates/: base.html  calendar_choose.html  calendar_show.html  choose_subjects.html  index.html  orario.tex
