[project]
name = "orario-universita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "pandas",
    "pypdf",
    "python-slugify",
    "pydantic",
    "pillow>=11.1.0",
]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pyright>=1.1.396",
    "ruff>=0.9.10",
]
